Removed commented out version code. Fixed alignment of copyright text on mobile device

--- a/src/styles/mod-components/_overrides.scss
+++ b/src/styles/mod-components/_overrides.scss
@@ -23,6 +23,10 @@ Title: Overrides
   text-align: right;
 }
 
+.govuk-footer__meta {
+  justify-content: flex-start;
+}
+
 
 // Change colour of phase banner tag
 .govuk-tag--mod {
